--- a/Bioinfo/Untitled.ipynb
+++ b/Bioinfo/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c20c7d74",
+   "id": "e48f1f03",
    "metadata": {},
    "source": [
     "# CDC15 yeast gene expression analysis "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e64530",
+   "id": "5ee63cb9",
    "metadata": {},
    "source": [
     "Problem:\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34dfbeea",
+   "id": "46f9fdbb",
    "metadata": {},
    "source": [
     "Source: http://www.exploredata.net/Downloads/Gene-Expression-Data-Set"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8279c0",
+   "id": "ee183502",
    "metadata": {},
    "source": [
     "Pedro Henrique de Almeida\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "277f0b95",
+   "id": "4d42f5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d197bf69",
+   "id": "0de0272b",
    "metadata": {
     "scrolled": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59bd96b4",
+   "id": "e3fc90ba",
    "metadata": {},
    "source": [
     "#### Here we're simplifying the data to a two-dimensional problem.\n",
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0260068d",
+   "id": "1af902f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d8991fdc",
+   "id": "f70f736d",
    "metadata": {
     "scrolled": true
    },
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f68f907",
+   "id": "e0bc4948",
    "metadata": {
     "scrolled": true
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22a54d82",
+   "id": "b067c985",
    "metadata": {},
    "source": [
     "#### Now we're simplifying the data to a three-dimensional problem.\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e3b51a61",
+   "id": "05de3343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9b32d32b",
+   "id": "121fb6cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e05bea47",
+   "id": "b7a60879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "be494482",
+   "id": "83ad2879",
    "metadata": {
     "scrolled": true
    },
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "134d0a6e",
+   "id": "0d0f492e",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "22243193",
+   "id": "a850d7a4",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d7a0a814",
+   "id": "d07041d3",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d6855a76",
+   "id": "1eeab88f",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f9b706",
+   "id": "bba731d2",
    "metadata": {},
    "source": [
     "#### Notice that, as the way K increases in a 2D problem compared to a 3D problem looks pretty similar. But we can't assert anything certainly so far. \n",
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7d1f6bd8",
+   "id": "c69cf6de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "139dfd95",
+   "id": "8a54ab58",
    "metadata": {},
    "outputs": [
     {
@@ -867,8 +867,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d486fee1",
+   "execution_count": 16,
+   "id": "91a01fb3",
    "metadata": {
     "scrolled": true
    },
@@ -899,8 +899,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39f1f639",
+   "execution_count": 17,
+   "id": "04926279",
    "metadata": {
     "scrolled": true
    },
@@ -935,7 +935,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "24708792",
+   "id": "93c58311",
    "metadata": {},
    "source": [
     "# Explicando os dados:\n",
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40faef8b",
+   "id": "36d4dc51",
    "metadata": {},
    "source": [
     "#### Perceba que temos os mesmos valores calculados anteriormente nos 4 primeiros indíces do vetor."
@@ -967,17 +967,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "004c7bb4",
+   "execution_count": 18,
+   "id": "387362b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[178, 634, 2046, 141, 1316, 1339, 507, 240, 573]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "diff_matrix[0][0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fddfaa07",
+   "id": "d0686978",
    "metadata": {},
    "source": [
     "#### Vamos ver o resto dos resultados:"
@@ -985,10 +996,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bea5a44b",
+   "execution_count": 19,
+   "id": "d6bb1800",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diff between 2D and 3D\n",
+      "[178, 634, 2046, 141, 1316, 1339, 507, 240, 573]\n",
+      "Diff between 2D and 4D\n",
+      "[376, 3790, 441, 751, 1052, 443, 1443, 941, 83]\n",
+      "Diff between 2D and 5D\n",
+      "[362, 1627, 718, 1732, 1033, 349, 522, 581, 229]\n",
+      "Diff between 2D and 6D\n",
+      "[517, 3618, 874, 880, 1036, 680, 504, 417, 274]\n",
+      "Diff between 2D and 7D\n",
+      "[3821, 1638, 1791, 223, 416, 608, 1052, 329, 626]\n",
+      "Diff between 2D and 8D\n",
+      "[3788, 3506, 1300, 1983, 583, 343, 66, 284, 698]\n",
+      "Diff between 2D and 9D\n",
+      "[3573, 1477, 964, 1016, 1223, 698, 221, 708, 399]\n",
+      "\n",
+      "Diff between 3D and 4D\n",
+      "[4177, 712, 821, 544, 654, 39, 1011, 38, 482]\n",
+      "Diff between 3D and 5D\n",
+      "[4171, 305, 1182, 1004, 402, 1067, 791, 242, 1060]\n",
+      "Diff between 3D and 6D\n",
+      "[4012, 848, 1360, 420, 553, 575, 76, 463, 762]\n",
+      "Diff between 3D and 7D\n",
+      "[448, 471, 1271, 1693, 8, 434, 563, 258, 601]\n",
+      "Diff between 3D and 8D\n",
+      "[475, 1033, 825, 658, 75, 332, 159, 510, 415]\n",
+      "Diff between 3D and 9D\n",
+      "[754, 565, 401, 376, 628, 630, 446, 357, 97]\n",
+      "\n",
+      "Diff between 4D and 5D\n",
+      "[4295, 1512, 1768, 145, 802, 875, 666, 5, 385]\n",
+      "Diff between 4D and 6D\n",
+      "[4172, 4011, 13, 756, 873, 1298, 297, 108, 52]\n",
+      "Diff between 4D and 7D\n",
+      "[320, 1526, 1262, 513, 1013, 423, 266, 61, 659]\n",
+      "Diff between 4D and 8D\n",
+      "[343, 3735, 727, 663, 267, 606, 4, 537, 264]\n",
+      "Diff between 4D and 9D\n",
+      "[664, 1399, 444, 931, 1190, 564, 453, 1112, 611]\n",
+      "\n",
+      "Diff between 5D and 6D\n",
+      "[4190, 1526, 418, 585, 298, 1311, 977, 1600, 161]\n",
+      "Diff between 5D and 7D\n",
+      "[272, 3979, 1688, 374, 820, 518, 275, 1009, 595]\n",
+      "Diff between 5D and 8D\n",
+      "[295, 1573, 322, 1653, 1427, 920, 281, 573, 214]\n",
+      "Diff between 5D and 9D\n",
+      "[612, 3793, 698, 1159, 584, 6, 1765, 31, 492]\n",
+      "\n",
+      "Diff between 6D and 7D\n",
+      "[185, 1608, 1300, 865, 1302, 259, 101, 1677, 146]\n",
+      "Diff between 6D and 8D\n",
+      "[186, 3985, 1398, 1188, 1330, 736, 207, 292, 634]\n",
+      "Diff between 6D and 9D\n",
+      "[539, 1529, 1155, 604, 761, 139, 1612, 60, 292]\n",
+      "\n",
+      "Diff between 7D and 8D\n",
+      "[4342, 1776, 1902, 64, 1043, 112, 1173, 204, 1304]\n",
+      "Diff between 7D and 9D\n",
+      "[3969, 3926, 77, 997, 1479, 385, 412, 244, 79]\n",
+      "\n",
+      "Diff between 8D and 9D\n",
+      "[3970, 1670, 1141, 1081, 1481, 16, 248, 164, 780]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(diff_matrix)):\n",
     "    for j in range(len(diff_matrix[i])):\n",
@@ -999,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371e197c",
+   "id": "c9bdcc62",
    "metadata": {},
    "source": [
     "# Clustering for a 26D problem with k=5\n"
@@ -1007,8 +1088,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e6c87b02",
+   "execution_count": 20,
+   "id": "4fb8fc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,8 +1098,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36052442",
+   "execution_count": 21,
+   "id": "1d07b4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,12 +1112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5bec6431",
+   "execution_count": 22,
+   "id": "3d7e5c8d",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26D compared to 2D = 1566\n",
+      "26D compared to 3D = 914\n",
+      "26D compared to 4D = 1295\n",
+      "26D compared to 5D = 745\n",
+      "26D compared to 6D = 687\n",
+      "26D compared to 7D = 141\n",
+      "26D compared to 8D = 914\n",
+      "26D compared to 9D = 316\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 8):\n",
     "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][5-2])}\" )"
@@ -1044,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c2a0ff",
+   "id": "5ac934a3",
    "metadata": {},
    "source": [
     "# Clustering for a 26D problem with k=7"
@@ -1052,8 +1148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce28e5fc",
+   "execution_count": 23,
+   "id": "2409d84b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,12 +1162,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2df6ef72",
+   "execution_count": 24,
+   "id": "41e45367",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26D compared to 2D = 701\n",
+      "26D compared to 3D = 954\n",
+      "26D compared to 4D = 791\n",
+      "26D compared to 5D = 587\n",
+      "26D compared to 6D = 461\n",
+      "26D compared to 7D = 749\n",
+      "26D compared to 8D = 844\n",
+      "26D compared to 9D = 756\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 8):\n",
     "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][7-2])}\" )"
@@ -1079,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7911be21",
+   "id": "19d163e0",
    "metadata": {},
    "source": [
     "# Clustering for a 26D problem with k=10"
@@ -1087,8 +1198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "454c6426",
+   "execution_count": 25,
+   "id": "9381b2c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,12 +1212,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d31101f7",
+   "execution_count": 26,
+   "id": "fa7cd47b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26D compared to 2D = 43\n",
+      "26D compared to 3D = 386\n",
+      "26D compared to 4D = 433\n",
+      "26D compared to 5D = 578\n",
+      "26D compared to 6D = 338\n",
+      "26D compared to 7D = 545\n",
+      "26D compared to 8D = 355\n",
+      "26D compared to 9D = 412\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 8):\n",
     "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][10-2])}\" )"
@@ -1114,8 +1240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc2cb4d1",
+   "execution_count": 27,
+   "id": "86694b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05314bd1",
+   "id": "1ac39eab",
    "metadata": {},
    "source": [
     "# Conclusion\n",
