--- a/Bioinfo/Untitled.ipynb
+++ b/Bioinfo/Untitled.ipynb
@@ -449,7 +449,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2c592122eb0>"
+       "<matplotlib.collections.PathCollection at 0x29596b46940>"
       ]
      },
      "execution_count": 4,
@@ -606,7 +606,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2c592f39cd0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2959797c670>"
       ]
      },
      "execution_count": 9,
@@ -645,7 +645,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2c592fcf5b0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29597a1b130>"
       ]
      },
      "execution_count": 10,
@@ -690,7 +690,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2c594033e80>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29598a6f340>"
       ]
      },
      "execution_count": 11,
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2c5940c06a0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29598aef940>"
       ]
      },
      "execution_count": 12,
@@ -780,7 +780,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2c594145ee0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29598b76fa0>"
       ]
      },
      "execution_count": 13,
@@ -827,26 +827,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "c69cf6de",
    "metadata": {},
    "outputs": [],
    "source": [
     "k_2, k_3, k_4, k_5 = 0, 0, 0, 0\n",
     "for i in range(len(points)):\n",
-    "    if y_km_2_2d[i] != y_km_2_3d[i]:\n",
+    "    if y_km_2_2d[i] == y_km_2_3d[i]:\n",
     "        k_2 += 1\n",
-    "    if y_km_3_2d[i] != y_km_3_3d[i]:\n",
+    "    if y_km_3_2d[i] == y_km_3_3d[i]:\n",
     "        k_3 += 1\n",
-    "    if y_km_4_2d[i] != y_km_4_3d[i]:\n",
+    "    if y_km_4_2d[i] == y_km_4_3d[i]:\n",
     "        k_4 += 1\n",
-    "    if y_km_5_2d[i] != y_km_5_3d[i]:\n",
+    "    if y_km_5_2d[i] == y_km_5_3d[i]:\n",
     "        k_5 += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "8a54ab58",
    "metadata": {},
    "outputs": [
@@ -914,7 +914,7 @@
     "        for k in range(2-2, 11-2):\n",
     "            diff = 0\n",
     "            for l in range(len(points)):\n",
-    "                if different_dimensions_matrix[i][k][l] != different_dimensions_matrix[j][k][l]:\n",
+    "                if different_dimensions_matrix[i][k][l] == different_dimensions_matrix[j][k][l]:\n",
     "                    diff += 1\n",
     "            arrCompare.append(diff)\n",
     "        line.append(arrCompare)\n",
@@ -974,7 +974,7 @@
     {
      "data": {
       "text/plain": [
-       "[178, 3747, 2335, 4240, 3065, 3042, 3874, 4141, 3808]"
+       "[178, 634, 2046, 141, 1316, 1339, 507, 240, 573]"
       ]
      },
      "execution_count": 18,
@@ -1005,67 +1005,67 @@
      "output_type": "stream",
      "text": [
       "Diff between 2D and 3D\n",
-      "[178, 3747, 2335, 4240, 3065, 3042, 3874, 4141, 3808]\n",
+      "[178, 634, 2046, 141, 1316, 1339, 507, 240, 573]\n",
       "Diff between 2D and 4D\n",
-      "[4005, 591, 3940, 3630, 3329, 3938, 2938, 3440, 4298]\n",
+      "[376, 3790, 441, 751, 1052, 443, 1443, 941, 83]\n",
       "Diff between 2D and 5D\n",
-      "[4019, 2754, 3663, 2649, 3348, 4032, 3859, 3800, 4152]\n",
+      "[362, 1627, 718, 1732, 1033, 349, 522, 581, 229]\n",
       "Diff between 2D and 6D\n",
-      "[3864, 763, 3507, 3501, 3345, 3701, 3877, 3964, 4107]\n",
+      "[517, 3618, 874, 880, 1036, 680, 504, 417, 274]\n",
       "Diff between 2D and 7D\n",
-      "[560, 2743, 2590, 4158, 3965, 3773, 3329, 4052, 3755]\n",
+      "[3821, 1638, 1791, 223, 416, 608, 1052, 329, 626]\n",
       "Diff between 2D and 8D\n",
-      "[593, 875, 3081, 2398, 3798, 4038, 4315, 4097, 3683]\n",
+      "[3788, 3506, 1300, 1983, 583, 343, 66, 284, 698]\n",
       "Diff between 2D and 9D\n",
-      "[808, 2904, 3417, 3365, 3158, 3683, 4160, 3673, 3982]\n",
+      "[3573, 1477, 964, 1016, 1223, 698, 221, 708, 399]\n",
       "\n",
       "Diff between 3D and 4D\n",
-      "[4177, 3669, 3560, 3837, 3727, 4342, 3370, 4343, 3899]\n",
+      "[4177, 712, 821, 544, 654, 39, 1011, 38, 482]\n",
       "Diff between 3D and 5D\n",
-      "[4171, 4076, 3199, 3377, 3979, 3314, 3590, 4139, 3321]\n",
+      "[4171, 305, 1182, 1004, 402, 1067, 791, 242, 1060]\n",
       "Diff between 3D and 6D\n",
-      "[4012, 3533, 3021, 3961, 3828, 3806, 4305, 3918, 3619]\n",
+      "[4012, 848, 1360, 420, 553, 575, 76, 463, 762]\n",
       "Diff between 3D and 7D\n",
-      "[448, 3910, 3110, 2688, 4373, 3947, 3818, 4123, 3780]\n",
+      "[448, 471, 1271, 1693, 8, 434, 563, 258, 601]\n",
       "Diff between 3D and 8D\n",
-      "[475, 3348, 3556, 3723, 4306, 4049, 4222, 3871, 3966]\n",
+      "[475, 1033, 825, 658, 75, 332, 159, 510, 415]\n",
       "Diff between 3D and 9D\n",
-      "[754, 3816, 3980, 4005, 3753, 3751, 3935, 4024, 4284]\n",
+      "[754, 565, 401, 376, 628, 630, 446, 357, 97]\n",
       "\n",
       "Diff between 4D and 5D\n",
-      "[86, 2869, 2613, 4236, 3579, 3506, 3715, 4376, 3996]\n",
+      "[4295, 1512, 1768, 145, 802, 875, 666, 5, 385]\n",
       "Diff between 4D and 6D\n",
-      "[209, 370, 4368, 3625, 3508, 3083, 4084, 4273, 4329]\n",
+      "[4172, 4011, 13, 756, 873, 1298, 297, 108, 52]\n",
       "Diff between 4D and 7D\n",
-      "[4061, 2855, 3119, 3868, 3368, 3958, 4115, 4320, 3722]\n",
+      "[320, 1526, 1262, 513, 1013, 423, 266, 61, 659]\n",
       "Diff between 4D and 8D\n",
-      "[4038, 646, 3654, 3718, 4114, 3775, 4377, 3844, 4117]\n",
+      "[343, 3735, 727, 663, 267, 606, 4, 537, 264]\n",
       "Diff between 4D and 9D\n",
-      "[3717, 2982, 3937, 3450, 3191, 3817, 3928, 3269, 3770]\n",
+      "[664, 1399, 444, 931, 1190, 564, 453, 1112, 611]\n",
       "\n",
       "Diff between 5D and 6D\n",
-      "[191, 2855, 3963, 3796, 4083, 3070, 3404, 2781, 4220]\n",
+      "[4190, 1526, 418, 585, 298, 1311, 977, 1600, 161]\n",
       "Diff between 5D and 7D\n",
-      "[4109, 402, 2693, 4007, 3561, 3863, 4106, 3372, 3786]\n",
+      "[272, 3979, 1688, 374, 820, 518, 275, 1009, 595]\n",
       "Diff between 5D and 8D\n",
-      "[4086, 2808, 4059, 2728, 2954, 3461, 4100, 3808, 4167]\n",
+      "[295, 1573, 322, 1653, 1427, 920, 281, 573, 214]\n",
       "Diff between 5D and 9D\n",
-      "[3769, 588, 3683, 3222, 3797, 4375, 2616, 4350, 3889]\n",
+      "[612, 3793, 698, 1159, 584, 6, 1765, 31, 492]\n",
       "\n",
       "Diff between 6D and 7D\n",
-      "[4196, 2773, 3081, 3516, 3079, 4122, 4280, 2704, 4235]\n",
+      "[185, 1608, 1300, 865, 1302, 259, 101, 1677, 146]\n",
       "Diff between 6D and 8D\n",
-      "[4195, 396, 2983, 3193, 3051, 3645, 4174, 4089, 3747]\n",
+      "[186, 3985, 1398, 1188, 1330, 736, 207, 292, 634]\n",
       "Diff between 6D and 9D\n",
-      "[3842, 2852, 3226, 3777, 3620, 4242, 2769, 4321, 4089]\n",
+      "[539, 1529, 1155, 604, 761, 139, 1612, 60, 292]\n",
       "\n",
       "Diff between 7D and 8D\n",
-      "[39, 2605, 2479, 4317, 3338, 4269, 3208, 4177, 3077]\n",
+      "[4342, 1776, 1902, 64, 1043, 112, 1173, 204, 1304]\n",
       "Diff between 7D and 9D\n",
-      "[412, 455, 4304, 3384, 2902, 3996, 3969, 4137, 4302]\n",
+      "[3969, 3926, 77, 997, 1479, 385, 412, 244, 79]\n",
       "\n",
       "Diff between 8D and 9D\n",
-      "[411, 2711, 3240, 3300, 2900, 4365, 4133, 4217, 3601]\n",
+      "[3970, 1670, 1141, 1081, 1481, 16, 248, 164, 780]\n",
       "\n"
      ]
     }
@@ -1122,20 +1122,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26D compared to 2D = 2815\n",
-      "26D compared to 3D = 3467\n",
-      "26D compared to 4D = 3086\n",
-      "26D compared to 5D = 3636\n",
-      "26D compared to 6D = 3694\n",
-      "26D compared to 7D = 4240\n",
-      "26D compared to 8D = 3467\n",
-      "26D compared to 9D = 4065\n"
+      "26D compared to 2D = 1566\n",
+      "26D compared to 3D = 914\n",
+      "26D compared to 4D = 1295\n",
+      "26D compared to 5D = 745\n",
+      "26D compared to 6D = 687\n",
+      "26D compared to 7D = 141\n",
+      "26D compared to 8D = 914\n",
+      "26D compared to 9D = 316\n"
      ]
     }
    ],
    "source": [
     "for i in range(0, 8):\n",
-    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d != different_dimensions_matrix[i][5-2])}\" )"
+    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][5-2])}\" )"
    ]
   },
   {
@@ -1172,20 +1172,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26D compared to 2D = 3680\n",
-      "26D compared to 3D = 3427\n",
-      "26D compared to 4D = 3590\n",
-      "26D compared to 5D = 3794\n",
-      "26D compared to 6D = 3920\n",
-      "26D compared to 7D = 3632\n",
-      "26D compared to 8D = 3537\n",
-      "26D compared to 9D = 3625\n"
+      "26D compared to 2D = 701\n",
+      "26D compared to 3D = 954\n",
+      "26D compared to 4D = 791\n",
+      "26D compared to 5D = 587\n",
+      "26D compared to 6D = 461\n",
+      "26D compared to 7D = 749\n",
+      "26D compared to 8D = 844\n",
+      "26D compared to 9D = 756\n"
      ]
     }
    ],
    "source": [
     "for i in range(0, 8):\n",
-    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d != different_dimensions_matrix[i][7-2])}\" )"
+    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][7-2])}\" )"
    ]
   },
   {
@@ -1222,20 +1222,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26D compared to 2D = 4338\n",
-      "26D compared to 3D = 3995\n",
-      "26D compared to 4D = 3948\n",
-      "26D compared to 5D = 3803\n",
-      "26D compared to 6D = 4043\n",
-      "26D compared to 7D = 3836\n",
-      "26D compared to 8D = 4026\n",
-      "26D compared to 9D = 3969\n"
+      "26D compared to 2D = 43\n",
+      "26D compared to 3D = 386\n",
+      "26D compared to 4D = 433\n",
+      "26D compared to 5D = 578\n",
+      "26D compared to 6D = 338\n",
+      "26D compared to 7D = 545\n",
+      "26D compared to 8D = 355\n",
+      "26D compared to 9D = 412\n"
      ]
     }
    ],
    "source": [
     "for i in range(0, 8):\n",
-    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d != different_dimensions_matrix[i][10-2])}\" )"
+    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][10-2])}\" )"
    ]
   },
   {
