--- a/Bioinfo/Bioinfo-Trabalho.ipynb
+++ b/Bioinfo/Bioinfo-Trabalho.ipynb
@@ -13,11 +13,9 @@
    "id": "5ee63cb9",
    "metadata": {},
    "source": [
-    "Problem:\n",
+    "Temos um dataset de expressão gênica da levedura CDC15. No total, temos 22 condições de experimento (colunas) e cerca de 4380 genes diferentes. Isso significa que tempos cerca de 100000 diferentes pedaços de informação sobre a levedura. Sabendo de tudo isso, podemos encontrar uma boa clusterização dos genes? Além disso, podemos generalizar clusters que consideração menos colunas para clusters com mais colunas? Isso é, por exemplo, considerando somente os tempos 40 e 50, podemos encontrar um cluster semelhante ao caso onde consideremos todas as colunas?\n",
     "\n",
-    "We have a big dataset of gene expressions of a yeast known as CDC15. In total, we have 26 different times and about 4380 different genes. Which means that we got about 100740 different pieces of information. Given all these stuff, can we find a good clustering for these genes? Besides, can we generalize smaller clusterings to bigger ones? That is, can we consider only 2 or 3 different times in order to find a good clustering?\n",
-    "\n",
-    "To do that, i'm going to use Lloyd's algorithm/K-Means with different numbers of K, plot that, compare the results from different dimensional clusterings and analyze the results."
+    "Para fazer isso, usa-se o algoritmo de Lloyd, plotamos os gráficos e analisamos os resultados."
    ]
   },
   {
@@ -25,7 +23,7 @@
    "id": "46f9fdbb",
    "metadata": {},
    "source": [
-    "Source: http://www.exploredata.net/Downloads/Gene-Expression-Data-Set"
+    "Fonte: http://www.exploredata.net/Downloads/Gene-Expression-Data-Set"
    ]
   },
   {
@@ -423,8 +421,8 @@
    "id": "e3fc90ba",
    "metadata": {},
    "source": [
-    "#### Here we're simplifying the data to a two-dimensional problem.\n",
-    "#### We plot the data without any clustering, apply K-Means with different K's and see the results"
+    "#### Aqui estamos simplificando os dados para um problema bidimensional.\n",
+    "#### Plotamos os dados sem nenhum agrupamento, aplicamos K-Means com diferentes K's e vemos os resultados"
    ]
   },
   {
@@ -449,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x29596b46940>"
+       "<matplotlib.collections.PathCollection at 0x1b759b72d90>"
       ]
      },
      "execution_count": 4,
@@ -559,8 +557,8 @@
    "id": "b067c985",
    "metadata": {},
    "source": [
-    "#### Now we're simplifying the data to a three-dimensional problem.\n",
-    "#### We plot the data without any clustering, apply K-Means with different K's and see the results"
+    "#### Agora estamos simplificando os dados para um problema tridimensional.\n",
+    "#### Plotamos os dados sem nenhum agrupamento, aplicamos K-Means com diferentes K's e vemos os resultados."
    ]
   },
   {
@@ -606,7 +604,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2959797c670>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x1b75a987cd0>"
       ]
      },
      "execution_count": 9,
@@ -645,7 +643,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29597a1b130>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x1b75aa1f5b0>"
       ]
      },
      "execution_count": 10,
@@ -690,7 +688,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29598a6f340>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x1b75ba83e80>"
       ]
      },
      "execution_count": 11,
@@ -735,7 +733,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29598aef940>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x1b75bb116a0>"
       ]
      },
      "execution_count": 12,
@@ -780,7 +778,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x29598b76fa0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x1b75bb94ee0>"
       ]
      },
      "execution_count": 13,
@@ -821,8 +819,8 @@
    "id": "bba731d2",
    "metadata": {},
    "source": [
-    "#### Notice that, as the way K increases in a 2D problem compared to a 3D problem looks pretty similar. But we can't assert anything certainly so far. \n",
-    "#### But we can compare how many different assignments for each problem we have:"
+    "#### Observe que, à medida que K aumenta em um problema 2D em comparação com um problema 3D, parece bastante semelhante. Mas não podemos afirmar nada com certeza até agora.\n",
+    "#### Mas podemos comparar quantas atribuições diferentes para cada problema temos"
    ]
   },
   {
@@ -834,13 +832,13 @@
    "source": [
     "k_2, k_3, k_4, k_5 = 0, 0, 0, 0\n",
     "for i in range(len(points)):\n",
-    "    if y_km_2_2d[i] == y_km_2_3d[i]:\n",
+    "    if y_km_2_2d[i] != y_km_2_3d[i]:\n",
     "        k_2 += 1\n",
-    "    if y_km_3_2d[i] == y_km_3_3d[i]:\n",
+    "    if y_km_3_2d[i] != y_km_3_3d[i]:\n",
     "        k_3 += 1\n",
-    "    if y_km_4_2d[i] == y_km_4_3d[i]:\n",
+    "    if y_km_4_2d[i] != y_km_4_3d[i]:\n",
     "        k_4 += 1\n",
-    "    if y_km_5_2d[i] == y_km_5_3d[i]:\n",
+    "    if y_km_5_2d[i] != y_km_5_3d[i]:\n",
     "        k_5 += 1"
    ]
   },
@@ -914,7 +912,7 @@
     "        for k in range(2-2, 11-2):\n",
     "            diff = 0\n",
     "            for l in range(len(points)):\n",
-    "                if different_dimensions_matrix[i][k][l] == different_dimensions_matrix[j][k][l]:\n",
+    "                if different_dimensions_matrix[i][k][l] != different_dimensions_matrix[j][k][l]:\n",
     "                    diff += 1\n",
     "            arrCompare.append(diff)\n",
     "        line.append(arrCompare)\n",
@@ -1004,67 +1002,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Diff between 2D and 3D\n",
+      "Differences between 2D and 3D\n",
       "[178, 634, 2046, 141, 1316, 1339, 507, 240, 573]\n",
-      "Diff between 2D and 4D\n",
+      "Differences between 2D and 4D\n",
       "[376, 3790, 441, 751, 1052, 443, 1443, 941, 83]\n",
-      "Diff between 2D and 5D\n",
+      "Differences between 2D and 5D\n",
       "[362, 1627, 718, 1732, 1033, 349, 522, 581, 229]\n",
-      "Diff between 2D and 6D\n",
+      "Differences between 2D and 6D\n",
       "[517, 3618, 874, 880, 1036, 680, 504, 417, 274]\n",
-      "Diff between 2D and 7D\n",
+      "Differences between 2D and 7D\n",
       "[3821, 1638, 1791, 223, 416, 608, 1052, 329, 626]\n",
-      "Diff between 2D and 8D\n",
+      "Differences between 2D and 8D\n",
       "[3788, 3506, 1300, 1983, 583, 343, 66, 284, 698]\n",
-      "Diff between 2D and 9D\n",
+      "Differences between 2D and 9D\n",
       "[3573, 1477, 964, 1016, 1223, 698, 221, 708, 399]\n",
       "\n",
-      "Diff between 3D and 4D\n",
+      "Differences between 3D and 4D\n",
       "[4177, 712, 821, 544, 654, 39, 1011, 38, 482]\n",
-      "Diff between 3D and 5D\n",
+      "Differences between 3D and 5D\n",
       "[4171, 305, 1182, 1004, 402, 1067, 791, 242, 1060]\n",
-      "Diff between 3D and 6D\n",
+      "Differences between 3D and 6D\n",
       "[4012, 848, 1360, 420, 553, 575, 76, 463, 762]\n",
-      "Diff between 3D and 7D\n",
+      "Differences between 3D and 7D\n",
       "[448, 471, 1271, 1693, 8, 434, 563, 258, 601]\n",
-      "Diff between 3D and 8D\n",
+      "Differences between 3D and 8D\n",
       "[475, 1033, 825, 658, 75, 332, 159, 510, 415]\n",
-      "Diff between 3D and 9D\n",
+      "Differences between 3D and 9D\n",
       "[754, 565, 401, 376, 628, 630, 446, 357, 97]\n",
       "\n",
-      "Diff between 4D and 5D\n",
+      "Differences between 4D and 5D\n",
       "[4295, 1512, 1768, 145, 802, 875, 666, 5, 385]\n",
-      "Diff between 4D and 6D\n",
+      "Differences between 4D and 6D\n",
       "[4172, 4011, 13, 756, 873, 1298, 297, 108, 52]\n",
-      "Diff between 4D and 7D\n",
+      "Differences between 4D and 7D\n",
       "[320, 1526, 1262, 513, 1013, 423, 266, 61, 659]\n",
-      "Diff between 4D and 8D\n",
+      "Differences between 4D and 8D\n",
       "[343, 3735, 727, 663, 267, 606, 4, 537, 264]\n",
-      "Diff between 4D and 9D\n",
+      "Differences between 4D and 9D\n",
       "[664, 1399, 444, 931, 1190, 564, 453, 1112, 611]\n",
       "\n",
-      "Diff between 5D and 6D\n",
+      "Differences between 5D and 6D\n",
       "[4190, 1526, 418, 585, 298, 1311, 977, 1600, 161]\n",
-      "Diff between 5D and 7D\n",
+      "Differences between 5D and 7D\n",
       "[272, 3979, 1688, 374, 820, 518, 275, 1009, 595]\n",
-      "Diff between 5D and 8D\n",
+      "Differences between 5D and 8D\n",
       "[295, 1573, 322, 1653, 1427, 920, 281, 573, 214]\n",
-      "Diff between 5D and 9D\n",
+      "Differences between 5D and 9D\n",
       "[612, 3793, 698, 1159, 584, 6, 1765, 31, 492]\n",
       "\n",
-      "Diff between 6D and 7D\n",
+      "Differences between 6D and 7D\n",
       "[185, 1608, 1300, 865, 1302, 259, 101, 1677, 146]\n",
-      "Diff between 6D and 8D\n",
+      "Differences between 6D and 8D\n",
       "[186, 3985, 1398, 1188, 1330, 736, 207, 292, 634]\n",
-      "Diff between 6D and 9D\n",
+      "Differences between 6D and 9D\n",
       "[539, 1529, 1155, 604, 761, 139, 1612, 60, 292]\n",
       "\n",
-      "Diff between 7D and 8D\n",
+      "Differences between 7D and 8D\n",
       "[4342, 1776, 1902, 64, 1043, 112, 1173, 204, 1304]\n",
-      "Diff between 7D and 9D\n",
+      "Differences between 7D and 9D\n",
       "[3969, 3926, 77, 997, 1479, 385, 412, 244, 79]\n",
       "\n",
-      "Diff between 8D and 9D\n",
+      "Differences between 8D and 9D\n",
       "[3970, 1670, 1141, 1081, 1481, 16, 248, 164, 780]\n",
       "\n"
      ]
@@ -1073,7 +1071,7 @@
    "source": [
     "for i in range(len(diff_matrix)):\n",
     "    for j in range(len(diff_matrix[i])):\n",
-    "        print(f\"Diff between {i+2}D and {j+i+3}D\")\n",
+    "        print(f\"Differences between {i+2}D and {j+i+3}D\")\n",
     "        print(diff_matrix[i][j])\n",
     "    print(\"\")"
    ]
@@ -1083,7 +1081,7 @@
    "id": "c9bdcc62",
    "metadata": {},
    "source": [
-    "# Clustering for a 26D problem with k=5\n"
+    "# Clustering 26 colunas k = 5"
    ]
   },
   {
@@ -1135,7 +1133,7 @@
    ],
    "source": [
     "for i in range(0, 8):\n",
-    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][5-2])}\" )"
+    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d != different_dimensions_matrix[i][5-2])}\" )"
    ]
   },
   {
@@ -1143,7 +1141,7 @@
    "id": "5ac934a3",
    "metadata": {},
    "source": [
-    "# Clustering for a 26D problem with k=7"
+    "# Clustering 26 colunas k = 7"
    ]
   },
   {
@@ -1185,7 +1183,7 @@
    ],
    "source": [
     "for i in range(0, 8):\n",
-    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][7-2])}\" )"
+    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d != different_dimensions_matrix[i][7-2])}\" )"
    ]
   },
   {
@@ -1193,7 +1191,7 @@
    "id": "19d163e0",
    "metadata": {},
    "source": [
-    "# Clustering for a 26D problem with k=10"
+    "# Clustering 26 colunas k = 10"
    ]
   },
   {
@@ -1235,7 +1233,7 @@
    ],
    "source": [
     "for i in range(0, 8):\n",
-    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d == different_dimensions_matrix[i][10-2])}\" )"
+    "    print(f\"26D compared to {i+2}D = {np.sum(y_km_5_26d != different_dimensions_matrix[i][10-2])}\" )"
    ]
   },
   {
@@ -1257,8 +1255,8 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "In fact, the differences between lower dimensional compared to higher dimensional problems may variate without any clearly ratio, so we can't generalize low dimensional clustering to high dimensionals.\n",
-    "But we can see that as the way that K increases, the difference between the differences tends to decrease. \n",
+    "De fato, as diferenças entre problemas com menores dimensões comparado a problemas com maiores dimensões pode variar sem um padrão muito claro. dessa forma, não podemos realizar a generalização que buscávamos. \n",
+    "Entretanto, podemos observar que a medida em que K aumenta, as diferenças tendem a diminuir.\n",
     "\n"
    ]
   }
